// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgA:1-800",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 1600,
    "key": "volvox:ctgA:801-1600",
    "offsetPx": 800,
    "refName": "ctgA",
    "start": 800,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 2 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 100,
    "key": "volvox:ctgA:1-100",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 100,
  },
  Object {
    "assembly": "volvox",
    "end": 200,
    "key": "volvox:ctgB:101-200",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 100,
    "widthPx": 100,
  },
]
`;

exports[`block calculation can calculate some blocks 5 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 5600,
    "key": "volvox:ctgA:4801-5600",
    "offsetPx": 4800,
    "refName": "ctgA",
    "start": 4800,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 6400,
    "key": "volvox:ctgA:5601-6400",
    "offsetPx": 5600,
    "refName": "ctgA",
    "start": 5600,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 6 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 200,
    "key": "volvox:ctgA:1-200",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 200,
  },
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgB:1-800",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 0,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 7 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgB:1-800",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 0,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 1000,
    "key": "volvox:ctgB:801-1000",
    "offsetPx": 1000,
    "refName": "ctgB",
    "start": 800,
    "widthPx": 200,
  },
]
`;

exports[`block calculation can calculate some blocks 8 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 1600,
    "key": "volvox:ctgB:801-1600",
    "offsetPx": 1000,
    "refName": "ctgB",
    "start": 800,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 2400,
    "key": "volvox:ctgB:1601-2400",
    "offsetPx": 1800,
    "refName": "ctgB",
    "start": 1600,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 9 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 3200,
    "key": "volvox:ctgA:1601-3200",
    "offsetPx": 3200,
    "refName": "ctgA",
    "start": 1600,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 4800,
    "key": "volvox:ctgA:3201-4800",
    "offsetPx": 6400,
    "refName": "ctgA",
    "start": 3200,
    "widthPx": 800,
  },
]
`;
